app/stylesheets/design/_buttons.scss
/******************************

BUTTONS / ICONS

******************************/
.button {
  @include border-radius(5px);
  color: #6e6e6e;
  @include inline-block;
  font-size: .9em;
  font-weight: bold;
  padding: 10px;
  text-decoration: none;
  text-transform: uppercase;
  }
.wf-active .button {
  font-size: 1em;
  }  
.button.notext { text-indent: -9999px; }
.button.list { margin: 0 5px 0 0; }
.button.list:last-child,
.button.list.lastchild { margin: 0; }  
.comments_close { /* TODO this doesn't belong here */
  background: sprite-image('icons/icon_comment.png', 0, 0, 20px) no-repeat;
  color: #6e6e6e;
  @include apertura-condensed;
  line-height: 19px;
  margin: 1em 0 0 0;
  padding: 0 0 5px 30px;
  text-transform: uppercase;
  }
.jqmClose {
  background: sprite-image('icons/icon_close.png', 0, 0, 50px) no-repeat;
  height:  image-height('icons/icon_close.png');
  @include hide-text;
  width: image-width('icons/icon_close.png');
  }
#clippy {
  @include inline-block;
  }
.button.social {
  background: none;
  display: block;
  height: 31px;
  padding: 0;
  @include hide-text;
  width: 31px;
  border: none;
  border-radius: 0px;
  }
.button.format {
  border: none;
  background-color: #fff;
  background-repeat: no-repeat;
  line-height: 24px;
  padding: 0 0 0 27px;
  }
.button.format.pdf,
.button.format.xml,
.button.format.print,
.button.format.pi {
  line-height: 25px;
  padding-left: 20px;
  margin-right: 10px;  
  }

.button.social.flag_for_later { display:none; background: sprite-image('icons/my_fr2/icon_add_to_clipboard.png', 0, 0, 50px) no-repeat; }
.button.social.flag_for_later.flagged { background: sprite-image('icons/my_fr2/icon_add_to_clipboard_active.png', 0, 0, 50px) no-repeat; }
.button.social.flag_for_later:hover { background: sprite-image('icons/my_fr2/icon_add_to_clipboard_active.png', 0, 0, 50px) no-repeat; }

.button.social.email { background: sprite-image('icons/sharing/icon_email.png', 0, 0, 55px); }
.button.social.email:hover { background: sprite-image('icons/sharing/icon_email_active.png', 0, 0, 55px); }

.button.social.facebook { background: sprite-image('icons/sharing/icon_facebook.png', 0, 0, 55px); }
.button.social.facebook:hover { background: sprite-image('icons/sharing/icon_facebook_active.png', 0, 0, 55px); }

.button.social.twitter { background: sprite-image('icons/sharing/icon_twitter.png', 0, 0, 55px); }
.button.social.twitter:hover { background: sprite-image('icons/sharing/icon_twitter_active.png', 0, 0, 55px); }

.button.format.pdf { background: sprite-image('icons/icon_pdf_document.png', 0, -1px, 50px) no-repeat; }
.button.format.pdf:hover { background: sprite-image('icons/icon_pdf_document_on.png', 0, -1px, 50px) no-repeat; }
.button.format.pdf.small { background: sprite-image('icons/icon_pdf_small.png', 0, 0, 50px); line-height: 18px; padding-left: 17px; }
.button.format.xml { background: sprite-image('icons/icon_code_document.png', 0, 0, 50px) no-repeat; }
.button.format.xml:hover { background: sprite-image('icons/icon_code_document_on.png', 0, 0, 50px) no-repeat; }
.button.format.external { background: sprite-image('icons/icon_external.png', 0, 4px, 50px); }
.button.format.external:hover { background: sprite-image('icons/icon_external_hover.png', 0, 4px, 20px); }
.button.format.print { background: sprite-image("icons/icon_print.png", 0, 3px, 100px) no-repeat; padding-left: 26px; }
.button.format.print:hover { background: sprite-image("icons/icon_print_on.png", 0, 3px, 100px) no-repeat; }
.button.format.pi { background: sprite-image('icons/icon_pdf_dashed_document.png', 0, -1px, 50px) no-repeat; margin-top: 5px; }
.button.format.pi:hover { background: sprite-image('icons/icon_pdf_dashed_document_on.png', 0, -1px, 50px) no-repeat; margin-top: 5px; }

  

.other_formats,
.rss,
.add_to_calendar,
a.subscription {
  color: #6e6e6e;
  font-size: 1.2em;
  font-weight: bold;
  padding: 0 0 0 25px;
  z-index: 250;
  }
a.subscription {
  padding: 0 0 0 50px;
  }
.rss,
a.subscription {
  background: sprite-image('icons/icon_rss.png', 0, 0, 50px) no-repeat;
  font-size: 1em;
  height: image-height('icons/icon_rss.png');
  padding-top:2px;
  text-transform: uppercase;
  }
.rss:hover {
  background: sprite-image('icons/icon_rss_hover.png', 0, 0, 50px) no-repeat;
  }
a.subscription {
  background: sprite-image('icons/icon_subscribe.png', 0, 0, 50px) no-repeat;  
  }
a.subscription:hover {
  background: sprite-image('icons/icon_subscribe_hover.png', 0, 0, 50px) no-repeat;  
  color: #B88659;
  }    
.add_to_calendar {
  background: sprite-image('icons/add_to_calendar_half.png', 0, 0, 50px) no-repeat;
  line-height: image-height('icons/add_to_calendar_half.png');
  padding-top: 5px;
  }
.add_to_calendar:hover { 
  background: sprite-image('icons/add_to_calendar_half_hover.png', 0, 0, 50px) no-repeat; 
  }  
  

